@@ -4,11 +4,8 @@
          xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
          xmlns:xi="http://www.w3.org/2001/XInclude">
 
-  <!-- Links -->
-  <after css:theme="title" css:content="head link:not([rel*=icon])"/>
-
-  <!-- Style -->
-  <after css:theme="title" css:content="head style"/>
+  <!-- Links & Styles -->
+  <after css:theme="title" css:content="head link:not([rel*=icon]), head style"/>
 
   <!-- Scripts -->
   <after css:theme="title" css:content="head script"/>
