@@ -4,6 +4,8 @@ Changelog
 1.0 (unreleased)
 ------------------
 
+- Plone: Fix <style> / <link> order mixing
+  [laulaz]
 - Bootstrap: handle error fields for z3cforms.
   [davidjb]
 - Bootstrap: convert ``submit-widget`` input buttons into primary buttons.
